# FinancialAdvisor

./: .gitignore  .replit  README.md  app.py  package-lock.json  package.json  pyproject.toml  replit.md  requirements.txt  vercel.json
api/: smart-report.py
attached_assets/: Pasted-Project-Build-a-professional-modern-one-page-AI-powered-financial-advisor-web-application-named--1752907622899_1752907622899.txt  finalcode_1752907633708.py  requirements.txt
client/: index.html
client/src/: App.tsx  index.css
client/src/components/: chart-components.tsx  export-utils.tsx  financial-modal.tsx
client/src/lib/: financial-utils.ts
client/src/pages/: dashboard.tsx  home.tsx
server/: routes.ts  storage.ts
shared/: schema.ts
