[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "joblib>=1.5.1",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "pandas>=2.3.1",
    "prophet>=1.1.7",
    "scikit-learn>=1.7.1",
    "xgboost>=3.0.2",
]
